fixing spacing of media type radio buttons for small resolution screens

--- a/app/styles/less/raml-console.less
+++ b/app/styles/less/raml-console.less
@@ -220,15 +220,6 @@ span[role=segment] {
 
     .media-types {
       text-align: right;
-
-      .radio-group-label {
-        color: #B2AEAD;
-        font-size: 10px;
-        text-transform: uppercase;
-        font-weight: bold;
-        margin-right: 10px;
-      }
-
     }
 
     textarea[name=body] {
@@ -257,7 +248,7 @@ span[role=segment] {
     }
 
     .request-body {
-      margin-top: -25px;
+      margin-top: -5px;
     }
 
     .form-actions {
